# create-ucode

./: .gitignore  README.md  index.js  package-lock.json  package.json
.github/workflows/: ci.yml
templates/c-mod/: .gitignore  Dockerfile  Makefile  README.md
templates/c-mod/.github/workflows/: ci.yml
templates/c-mod/mod/: CMakeLists.txt  native.c
templates/c-mod/openwrt/{{PKG_NAME}}/: Makefile  test.sh
templates/c-mod/src/: {{UCODE_MOD_NAME}}.uc
templates/c-mod/test/: utest.config.uc  {{UCODE_MOD_NAME}}_test.uc
templates/c-mod/test/unit/: {{UCODE_MOD_NAME}}_test.uc
templates/c-plugin/: Makefile
templates/c-plugin/mod/: CMakeLists.txt  native.c
templates/c-plugin/openwrt/{{PKG_NAME}}/: Makefile  test.sh
templates/c-plugin/src/: main.uc
templates/c-plugin/test/: main_test.uc
templates/pure-ucode/: .gitignore  Dockerfile  Makefile  README.md
templates/pure-ucode/.github/workflows/: ci.yml
templates/pure-ucode/openwrt/{{PKG_NAME}}/: Makefile  test.sh
templates/pure-ucode/src/: main.uc
templates/pure-ucode/test/: main_test.uc  utest.config.uc  {{UCODE_MOD_NAME}}_test.uc
templates/pure-ucode/test/unit/: {{UCODE_MOD_NAME}}_test.uc
templates/ucode-luci/: LICENSE  Makefile  README.md
templates/ucode-luci/.github/workflows/: ci.yml
templates/ucode-luci/devenv/: docker-compose.yaml
templates/ucode-luci/openwrt/{{PKG_NAME}}/: Makefile
templates/ucode-luci/src/: {{PKG_NAME}}.uc
templates/ucode-luci/test/: playwright.config.js
templates/ucode-luci/test/e2e/: {{PKG_NAME}}.spec.js
templates/ucode-luci/test/unit/: {{PKG_NAME}}_test.uc  (+1 more)
(+9 files in other folders)
